[package]
name = "kipukas-server"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
matchit = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yrs = "0.25"
base64 = "0.22"
rqrr = { version = "0.10", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true